--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,4 +2,4 @@ jdk:
   - openjdk17
 
 install:
-  - ./gradlew clean -Pgroup=com.github.Xiao-MoMi -Pversion=0.5 -xtest publishToMavenLocal
+  - ./gradlew clean -Pgroup=com.github.Xiao-MoMi -Pversion=0.5 -xtest shadowJar publishToMavenLocal
